# cairos

./: .gitignore  Cargo.toml  docker-compose.yaml  rust-toolchain.toml
api/: .env  .example.env  Cargo.toml
api/migrations/: 20250822001439_init.sql  20250823174123_oauth.sql
api/src/: config.rs  crypto.rs  main.rs
api/src/http/: auth.rs  error.rs  events.rs  extractor.rs  heartbeat.rs  mod.rs
api/src/http/routes/: github_auth.rs  github_callback.rs  heartbeat.rs  mod.rs
api/src/queries/: auth_tokens.rs  events.rs  mod.rs  user.rs
cli/: Cargo.toml
cli/src/: cli.rs  clients.rs  config.rs  main.rs
cli/src/commands/: auth.rs  config.rs  language_server.rs  mod.rs
extensions/zed/: Cargo.toml  extension.toml
extensions/zed/language-server/: Cargo.toml
extensions/zed/language-server/src/: main.rs
extensions/zed/src/: lib.rs
