[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["tokio"] }
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "time",
] }
time = { version = "0.3.41", features = ["serde", "macros"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
clap = { version = "4.5.45", features = ["derive", "env"] }
anyhow = "1.0.99"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
    "catch-panic",
    "compression-full",
    "timeout",
    "trace",
] }
log = "0.4.27"
thiserror = "2.0.12"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
reqwest = { version = "0.12.23", features = ["json"] }
rand = "0.9.2"
hex = "0.4.3"
