[package]
name = "cli"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
time = "0.3.41"
tokio = { version = "1.47.1", features = ["io-std", "macros", "rt-multi-thread", "process"] }
toml = "0.9.5"
tower-lsp = "0.20.0"
url = "2.5.7"
